--- a/src/Components/CreateRowButton/CreateRowButton.css
+++ b/src/Components/CreateRowButton/CreateRowButton.css
@@ -1,3 +1,23 @@
-.create-row-button{
-    color:brown;
+.create-row-btn {
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#dda509;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+.create-row-btn:hover {
+    background-color:#dda509;
+}
+
+.create-row-btn:active {
+    color: #BBBBBB;
+    border-color: #BBBBBB;
 }
