--- a/src/Components/MonthButton/MonthButton.css
+++ b/src/Components/MonthButton/MonthButton.css
@@ -1,7 +1,14 @@
 .month-button {
-    color: rgb(255, 51, 0);
-    margin: 5px;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-  }
+  color: rgb(255, 255, 255);
+  background-color: rgb(153, 102, 6);
+  margin: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+
+.month-button.active {
+  background-color: rgb(241, 141, 11); 
+}
