--- a/src/Components/MonthTable/MonthTable.css
+++ b/src/Components/MonthTable/MonthTable.css
@@ -1,24 +1,34 @@
-table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-  }
-  
-  th {
-    background-color: #f4f4f4;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  tr:hover {
-    background-color: #ddd;
-  }
-  
+.month-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.month-table th, .month-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+  width: 25px;
+  height: 33px;
+}
+
+.month-table th {
+  background-color: #f4f4f4;
+}
+
+.month-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+/* .month-table tr:hover {
+  background-color: #ddd;
+} */
+
+.month-table input[type="checkbox"] {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
   
