--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
 .tables-container {
   display: flex;
   flex-direction: row;
+  justify-content: center; 
+  align-items: center;
 }
 
 .table-wrapper {
