--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,19 @@ code {
     monospace;
 }
 
-body {
+/* body {
   background-image: url('/public/back_image.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+} */
+
+body {
+  margin: 0;
+  height: 100%;
+  background-image: url('/public/back_image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
