--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -1,37 +1,43 @@
-.habit-table {
+.main-table {
     border-collapse: collapse;
     width: 100%;
   }
   
-  .habit-table th, .habit-table td {
+  .main-table th, .main-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
+    width: 25px;
     height: 33px;
     background-color: transparent; 
     color: white; 
   }
-  
-  .habit-table th {
-    background-color: transparent;
-  }
-  
-  .habit-table tr {
+
+  .main-table tr {
     height: 50px;
     text-align: center;
     color: white;
   }
-
-  .habit-table tr:nth-child(even) {
+  
+  .main-table th {
     background-color: transparent;
   }
   
-  .habit-table tr:hover {
-    background-color: #ddd;
+  .main-table tr:nth-child(even) {
+    background-color: transparent; 
   }
   
-  .habit-table input {
+  .main-table input[type="checkbox"] {
     width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+    background-color: white; 
+  }
+
+  .main-table input[type="text"]{
+    width: 150px;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #ccc;
