--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -1,46 +1,71 @@
 .main-table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  .main-table th, .main-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-    width: 25px;
-    height: 33px;
-    background-color: transparent; 
-    color: white; 
-  }
+  border-collapse: collapse;
+  width: 100%;
+}
 
-  .main-table tr {
-    height: 50px;
-    text-align: center;
-    color: white;
-  }
-  
-  .main-table th {
-    background-color: transparent;
-  }
-  
-  .main-table tr:nth-child(even) {
-    background-color: transparent; 
-  }
-  
-  .main-table input[type="checkbox"] {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    display: block;
-    background-color: white; 
-  }
+.main-table th, .main-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+  height: 33px;
+  background-color: transparent; 
+  color: white; 
+}
 
-  .main-table input[type="text"]{
-    width: 150px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-  }
-  
+.habit-column {
+  width: 150px;
+}
+
+.main-table tr {
+  height: 50px;
+  text-align: center;
+  color: white;
+}
+
+.main-table th {
+  background-color: transparent;
+}
+
+.main-table tr:nth-child(even) {
+  background-color: transparent; 
+}
+
+.main-table input[type="checkbox"] {
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  background-color: white;
+  -webkit-appearance: none; /* Remove default checkbox styling */
+  -moz-appearance: none; /* Remove default checkbox styling */
+  appearance: none; /* Remove default checkbox styling */
+  border: 2px solid #ccc;
+  border-radius: 3px;
+}
+
+.main-table input[type="checkbox"]:checked {
+  background-color: orange;
+  border-color: orange;
+}
+
+.main-table input[type="checkbox"]:checked::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
+  border-radius: 3px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='white' d='M6.173 13.974l-5-5a.75.75 0 0 1 1.06-1.06L6.75 11.81l6.977-6.977a.75.75 0 1 1 1.06 1.06l-7.5 7.5a.75.75 0 0 1-1.06 0z'/%3E%3C/svg%3E");
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.main-table input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 1px;
+}
