--- a/src/Components/UserIcon/UserIcon.css
+++ b/src/Components/UserIcon/UserIcon.css
@@ -5,16 +5,20 @@
   margin-left: auto;
 }
 
+.user-icon-button {
+  background: transparent; /* Забезпечує, що фон кнопки прозорий */
+  border: none; /* Прибирає будь-які межі кнопки */
+  padding: 0; /* Видаляє будь-які відступи */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
 .user-img {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
+  object-fit: cover;
+  background: transparent; /* Забезпечує, що фон зображення прозорий */
+  border: none; /* Прибирає будь-які межі зображення */
 }
-
-.user-name {
-  font-size: 10px;
-  text-align: center;
-  margin-top: 5px;
-}
-
-  
